src/index.css
/* ... */
.links a,
.links button {
  display: flex;
  align-items: center;
  font-size: 1.25rem;
  text-transform: capitalize;
  padding: 2vh 1.5rem 2vh 33%;
  color: var(--grey-700);
  transition: var(--transition);
  letter-spacing: var(--spacing-reduced);
}

.links button {
  border: none;
  background: none;
  font-family: var(--ff-primary);
  line-height: 1.5;
}

.links a svg,
.links button svg {
  font-size: 1.5rem;
  color: var(--clr-secondary-active);
  margin-right: 1rem;
  transition: var(--transition);
}

.links .submenu-link a {
  padding-left: calc(33% + 2.5rem);
}

.links .submenu-link a svg {
  color: var(--clr-primary-5);
}

.social-links {
  display: flex;
  justify-content: center;
  padding-bottom: 2rem;
}

.social-links.logo-text {
  height: 22vw;
  padding-bottom: unset;
  background-image: url(./images/perfect-match-logo_only-text.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.social-links a {
  font-size: 1.5rem;
  margin: 0 1rem;
  color: var(--clr-primary-5);
  transition: var(--transition);
}

@media screen and (min-width: 676px) {
  .sidebar {
    width: 400px;
  }

  .sidebar.show-sidebar {
    box-shadow: var(--shadow-3);
  }
}

@media screen and (min-width: 768px) {
  .sidebar {
    height: calc(100vh - 3.75rem);
    background-color: hsla(213, 24%, 15%, .6);
    width: 100vw;
    top: 3.75rem;
    padding: 0;
    row-gap: 0;
  }

  .social-links,
  .links {
    background-color: var(--clr-off-white-text);
  }

  .links {
    margin-top: -1px;
    margin-bottom: -2px;
  }

  .social-links a {
    font-size: 1.75rem;
    margin: 0 1rem;
  }

  .social-links {
    height: 23vh;
  }

  .social-links.logo-text {
    height: 27.5vh;
  }

  .social-links {
    clip-path: polygon(0% 0%, 100% 0, 100% 25%, 37% 100%, 0% 100%);
  }

  .social-links.logo-text {
    background-size: 36%;
    background-position-y: 66%;
    clip-path: polygon(0% 63%, 63% 0, 100% 0, 100% 100%, 0% 100%);
  }

  .links a,
  .links button {
    padding-left: 40%;
  }

  .links a svg {
    font-size: 1.75rem;
  }

  .links .submenu-link a {
    padding-left: calc(40% + 2.5rem);
  }
}

@media screen and (min-width: 992px) {
  .links a:hover {
    background: var(--grey-100);
    color: var(--grey-800);
  }

  .links a svg:hover {
    color: var(--clr-green-dark);
  }

  .social-links a:hover {
    color: var(--primary-800)
  }
}

/*
=============== 
Modal
===============
*/

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: grid;
  place-items: center;
  z-index: -1;
  visibility: hidden;
  opacity: 0;
}

.modal-overlay.show-modal {
  z-index: 10;
  visibility: visible;
  opacity: 1;
  transition-property: opacity;
  transition-duration: 500ms;
}

.modal-container {
  background: var(--clr-white);
  width: 87.2vw;
  border-radius: var(--radius-increased);
  max-width: var(--width-fixed-540);
  text-align: center;
  display: grid;
  place-items: center;
  position: relative;
  top: 2rem;
  box-shadow: var(--shadow);
}

.modal-container.modal-container__application-form {
  height: 66vh;
  max-height: 39rem;
  top: 3.75rem;
}

.modal-container.modal-container__application-form.modal-container__cookie-consent {
  height: 37.5vh;
  max-height: 20rem;
}

.modal-container.modal-container__application-form.modal-container__contact-form {
  top: 1.875rem;
  height: unset;
  max-height: unset;
  grid-template-columns: unset;
  padding-left: unset;
}

.close-modal-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 1.5rem;
  background: transparent;
  border-color: transparent;
  cursor: pointer;
  z-index: 2;
}

.close-modal-btn.close-modal-btn__application-form {
  top: 2.5vh;
}

.close-modal-btn svg path {
  stroke: var(--clr-secondary-active);
}

@media screen and (min-width: 768px) {
  .modal-container.modal-container__application-form.modal-container__cookie-consent {
    max-height: 9rem;
  }

  .close-modal-btn {
    font-size: 2rem;
  }

  .close-modal-btn.close-modal-btn__application-form {
    top: 1rem;
  }

  .modal-container.modal-container__application-form.modal-container__contact-form {
    height: 66vh;
    max-height: 42rem;
  }
}

@media screen and (min-width: 992px) {
  .modal-container {
    max-width: unset;
    width: unset;
    box-shadow: unset;
  }

  .modal-container.modal-container__application-form {
    grid-template-columns: 19vw 1fr;
    padding-left: 1rem;
    height: 41.5vw;
    top: 1.875rem;
    max-height: unset;
  }

  .modal-container.modal-container__application-form.modal-container__stripe {
    grid-template-columns: unset;
  }

  .modal-overlay.show-modal {
    background: var(--clr-pale-blue-bg);
  }

  .modal-overlay.show-modal.modal-overlay__cookie-consent {
    background: rgba(0, 0, 0, 0.5);
  }

  .close-modal-btn {
    font-size: clamp(24px, 2.25vw, 38px);
  }

  .modal-container.modal-container__application-form.modal-container__contact-form {
    height: 75vh;
  }
}

@media screen and (min-width: 1440px) {
  .modal-container.modal-container__application-form {
    max-width: 1120px;
  }

  .modal-container.modal-container__application-form {
    grid-template-columns: 17vw 1fr;
    height: 66vh;
    max-height: 39rem;
  }
}

/*
=============== 
Contact Form Modal
===============
*/

.form {
  width: 87.2vw;
  max-width: var(--width-fixed-540);
  background: var(--white);
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  padding: 3vh 1.5rem 0;
  margin: 3vh auto 1vh;
}

.form .fixed-height {
  height: 48vh;
  max-height: 24rem;
}

.form .fixed-height+div {
  margin-top: 1vh;
}

.form-input,
.form-textarea {
  width: 100%;
  padding: 0.775rem 0.75rem 0.775rem 1.125rem;
  border-radius: var(--radius-input);
  border: 1px solid var(--grey-300);
  font-size: 0.775rem;
  line-height: 1.86;
  font-family: var(--ff-primary);
  color: var(--grey-400);
  font-weight: var(--fw-600);
}
/* ... */

